--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           set -x
           docker version
           export dataset_commit_id=${{ github.event.client_payload.dataset_commit_id || 'latest' }}
-          container_id=$(docker create zack/hetic:$dataset_commit_id)
+          container_id=$(docker create zackg96/hetic:$dataset_commit_id)
           docker cp "$container_id:/data/input.data.json" .
           docker cp "$container_id:/data/output.data.json" .
           echo "Extracting dataset version $dataset_commit_id"
